# torchphysics

./: .coveragerc  .gitignore  2.0.0  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  NOTICE  README.rst  pyproject.toml  quader.stl  requirements.txt  setup.cfg  setup.py
.githooks/: prepare-commit-msg
.github/workflows/: docs-gh-pages.yml  pypi-deploy.yml  pytest.yml  python-package.yml
batch_scripts/: create_environment.bat  environment.yml  start_Jupyter_notebook.bat  start_spyder.bat
docs/: conf.py  examples.rst  index.rst  requirements.txt
docs/api/: modules.rst  torchphysics.models.rst  torchphysics.problem.conditions.rst  torchphysics.problem.domains.domain0D.rst  torchphysics.problem.domains.domain1D.rst  torchphysics.problem.domains.domain2D.rst  torchphysics.problem.domains.domain3D.rst  torchphysics.problem.domains.domainoperations.rst  torchphysics.problem.domains.rst  torchphysics.problem.rst  torchphysics.problem.samplers.rst  torchphysics.problem.spaces.rst  torchphysics.rst  torchphysics.utils.data.rst  torchphysics.utils.deeponet.rst  torchphysics.utils.pinn.rst  torchphysics.utils.plotting.rst  torchphysics.utils.rst
docs/tutorial/: Introduction_Tutorial_PINNs.nblink  applied_tutorial_start.rst  condition_tutorial.rst  differentialoperators.rst  external_domains.rst  main_page.rst  model_creation.rst  plotting.rst  sampler_tutorial.rst  solve_pde.rst  solver_info.rst  tutorial_domain_basics.rst  tutorial_spaces_and_points.rst  tutorial_start.rst
examples/: burgers_equation.ipynb  domain_creation.ipynb  heat_equation.py  heat_equation_D_inverse.ipynb  heat_equation_D_variable.ipynb  heat_equation_D_variable.py  heat_equation_inverse.ipynb  heat_equation_networksize.py  heat_equation_on_cornerplate.ipynb  measure_eval_time.py  operator_example.ipynb  plot_model.py  sing_gest_rwa_U1.ipynb  stokes_equation.ipynb  test.ipynb
examples/Tribo/: Pilot_Tribo_Dirichlet_adaptive_activation_orig.ipynb  Referenzloesung_starr.CSV  activation_fn.py
examples/deeponet/: inverse_ode.ipynb  ode.ipynb  oscillator.ipynb  test.ipynb  test_new.ipynb  test_new_custom_fnset.ipynb  test_new_pi.ipynb  test_stuff.ipynb
examples/deepritz/: corner_pde.ipynb  poisson-equation.ipynb
examples/fno/: diffusion_2D.ipynb  integrator(+batchnorm).ipynb  integrator.ipynb  pino_integrator_1D.ipynb
examples/heat_equation/: bsub_heat_equation.bsub  cornerplate.stl  heat_equation.py
examples/hidden_physics/: Burgers_Equation_HPM.ipynb  Burgers_Equation_Hidden_Physics.ipynb  Duffing_Hidden_Physics.ipynb  burgers_sine.mat  duffing_oscillator_single_freq_input.ipynb  duffing_oscillator_white_noise_input.ipynb
examples/operator_learning/: Stokes_2D.ipynb  Stokes_2d.ipynb  diffusion_2D.ipynb  introductory_example.ipynb
examples/oscillation/: duffing_nonlinear-variable_damping.ipynb  duffing_nonlinear.ipynb  duffing_nonlinear.py  duffing_simplified.py
examples/pinn/: bsub_heat.bsub  bsub_heat_equation.bsub  duffing_nonlinear.ipynb  exp-function-with-param.ipynb  hard-constrains.ipynb  heat-equation.ipynb  heat-equation.py  interface-jump.ipynb  inverse-heat-equation-D-function.ipynb  inverse-heat-equation.ipynb  moving-heat-equation.ipynb  periodic-boundary-problem.ipynb  poisson-equation.ipynb  poisson-with-input-params.ipynb  signorini-equation.ipynb  singular-boundary-problem.ipynb
examples/solid_mechanics/: NN_final.pt  NN_min_loss.pt  mechanic_cube_FCN.ipynb
examples/tutorial/: Introduction_Tutorial_PINNs.ipynb  Introduction_Tutorial_PINNs_cleaned.ipynb  PINNs_Tutorial_Introduction.ipynb  Tutorial_PIDeepONet.ipynb  Tutorial_PINNs_Parameter_Dependency.ipynb  Tutorial_Simple_ODE.ipynb  domain_creation.ipynb  polygons_external_objects.ipynb  solve_pde.ipynb  solve_pde_drm.ipynb
examples/workshop/: Exercise1_1.ipynb  Exercise1_2.ipynb  Exercise1_3.ipynb  Exercise2_1.ipynb  Exercise2_2.ipynb  Exercise2_3.ipynb  Exercise3_1.ipynb  Exercise3_2.ipynb  Lecture_Example.py  Sol1_2.ipynb  Sol1_3.ipynb  Sol2_1.ipynb  Sol2_2.ipynb  Sol2_3.ipynb  Sol3_1.ipynb  Sol3_2.ipynb  workshop_example.ipynb
examples/wrapper/: fdm_heat_equation.py  heat-equation-wrapper.ipynb  inverse-heat-equation-D-function-wrapper.ipynb
experiments/: burgers_equation.ipynb  burgers_equation_pde_test.ipynb  create_movie.py  heat-equation.ipynb  heat_equation_D_variable.ipynb  sing_gest_rwa_U1.ipynb  stokes_test.ipynb
experiments/geometry/: average_inv_noise.py  average_we.py  d20_voll.stl  heat_equation_bearing.ipynb  heat_equation_bearing_orig.ipynb  spalt_ex2_01.stl
experiments/heat_equation/: exp_deepxde.py  heat_equation.py  heat_equation_D_variable.py  heat_equation_fast.py  heat_equation_networksize.py
src/neural_diff_eq/: __init__.py  datamodule.py  setting.py  skeleton.py  solver.py
src/torchphysics/: __init__.py  setting.py  solver.py
tests/: conftest.py  test_conditions.py  test_data_utils.py  test_differentialequations.py  test_differentialoperators.py  test_domain1D.py  test_domain2D.py  test_domain3D.py  test_domain_operations.py  test_evaluation.py  test_models.py  test_old_solver.py  test_plot.py  test_points.py  test_problem.py  test_samplers.py  test_setting.py  test_skeleton.py  test_solver.py  test_spaces.py
tests/tests_domain/: test_box_3d.py  test_domain0D.py  test_domain1D.py  test_domain2D.py  test_domain2D_shapely.py  test_domain3D.py  test_domain3D_trimesh.py  test_domainND_hypercube.py  test_domain_cut.py  test_domain_intersection.py  test_domain_product.py  test_domain_tranforms.py  test_domain_union.py
tests/tests_functionsets/: test_CustomFunctionSet.py  test_DataFunctionSet.py  test_FunctionSetMain.py  test_FunctionSetTransforms.py  test_FunctionSet_base.py  test_GRFFunctionSet.py  test_HarmonicFunctionSet.py
tests/tests_models/: test_activation_fn.py  test_deep_o_net.py  test_deepritz.py  test_fcn.py  test_fno.py  test_model_base.py  test_parameters.py  test_pcann.py  test_qres.py
tests/tests_plots/: test_animation.py  test_plot.py  test_scatter.py
tests/tests_sampler/: test_function_sampler.py
tests/tests_solver/: test_solver.py  test_training.py
(+175 files in other folders)
